--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ h6 {
 # Navigation Menu
 --------------------------------------------------------------*/
 /**
-* Desktop Navigation 
+* Desktop Navigation
 */
 .navbar {
   padding: 0;
@@ -206,7 +206,7 @@ h6 {
 }
 
 /**
-* Mobile Navigation 
+* Mobile Navigation
 */
 .mobile-nav-toggle {
   color: #fff;
@@ -310,6 +310,16 @@ h6 {
 .navbar-mobile .dropdown>.dropdown-active {
   display: block;
 }
+.aboutTable {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 50px;
+    font-size: 18px;
+    line-height: 50px;
+  }
 
 /*--------------------------------------------------------------
 # Hero Section
@@ -348,7 +358,7 @@ h6 {
 #hero h1 {
   margin: 0 0 10px 0;
   font-size: 64px;
-  font-family: "Satisfy", serif;
+  font-family: "Raleway", sans-serif;
   color: #fff;
 }
 
@@ -522,9 +532,25 @@ section {
   }
 }
 
+.description {
+  font-size: 15px;
+  line-height: 28px;
+  margin-bottom: 0;
+  height: 600px;
+  align-content: center;
+  text-align: center;
+}
+
 /*--------------------------------------------------------------
 # About Me
 --------------------------------------------------------------*/
+.about .info-box {
+  color: #444444;
+  text-align: center;
+  box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
+  padding: 20px 0 30px 0;
+}
+
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
@@ -647,6 +673,10 @@ section {
 /*--------------------------------------------------------------
 # My Resume
 --------------------------------------------------------------*/
+.resume .content {
+  height: 600px;
+}
+
 .resume .resume-title {
   font-size: 26px;
   font-weight: 700;
@@ -750,6 +780,7 @@ section {
   font-size: 15px;
   line-height: 28px;
   margin-bottom: 0;
+  height: 600px;
 }
 
 .services .icon-box:hover {
@@ -1266,7 +1297,7 @@ section {
   padding: 10px 24px;
   color: #fff;
   transition: 0.4s;
-  border-radius: 5px;
+  border-radius: 22px;
 }
 
 .contact .php-email-form button[type=submit]:hover {
