--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -365,7 +365,7 @@ h6 {
 #hero h2 {
   color: #eee;
   margin-bottom: 50px;
-  font-size: 13px;
+  font-size: 18px;
   font-weight: 500;
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -1323,7 +1323,7 @@ section {
   color: #fff;
   font-size: 14px;
   text-align: center;
-  padding: 80px 0;
+  padding: 10px 0;
   position: relative;
 }
 
@@ -1385,6 +1385,7 @@ section {
 
 #footer .copyright {
   margin: 0 0 5px 0;
+  font-family: "Raleway", sans-serif;
 }
 
 #footer .credits {
